Documentation edits made through Mintlify web editor

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -114,7 +114,8 @@ You can enable either option or both simultaneously.
       "id": "6870336416bf934c31bffdd8",
       "status": "timed_out",
       "durationInSeconds": 45001,
-      "brandId": "680e8bc08cdb14f10180db6a",
+      "teamId": "680e8bc08cdb14f10180db6a",
+	  "projectId": "6450e36787c81925622df494",
       "startUrls": ["https://example.com"],
       "numberOfResults": 19,
       "entireWebsite": false,
@@ -143,7 +144,8 @@ You can enable either option or both simultaneously.
     "crawlResult": {
       "id": "6870e3c687c81925622df89e",
       "crawlId": "6870e36787c81925622df818",
-      "brandId": "680e8bc08cdb14f10180db6a",
+	  "projectId": "6450e36787c81925622df494",
+      "teamId": "680e8bc08cdb14f10180db6a",
       "url": "https://example.com/solutions/network-observability",
       "depthOfUrl": 4,
       "title": "Kubernetes Network Observability",
@@ -220,7 +222,7 @@ Example response:
     {
       "id": "6870e3c687c81925622df89e",
       "crawlId": "6870e36787c81925622df818",
-      "brandId": "680e8bc08cdb14f10180db6a",
+      "teamId": "680e8bc08cdb14f10180db6a",
       "url": "https://example.com/solutions/network-observability",
       "depthOfUrl": 4,
       "title": "Kubernetes Network Observability",
