--- a/sdks/nodejs.mdx
+++ b/sdks/nodejs.mdx
@@ -114,7 +114,7 @@ const abortedCrawl = await client.abortCrawl(crawl.id);
 | includeLinks       | boolean        | Whether links are included                                                         |
 | maxDepth           | number         | Maximum crawl depth                                                                |
 | maxResults         | number         | Maximum number of results                                                          |
-| brandId            | string         | Brand identifier                                                                   |
+| teamId             | string         | Team identifier                                                                    |
 | createdAt          | string         | Creation timestamp                                                                 |
 | completedAt        | string \| null | Completion timestamp                                                               |
 | durationInSeconds  | number         | Total duration                                                                     |
