--- a/sdks/python.mdx
+++ b/sdks/python.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Python SDK'
-description: 'Get started with the Olyptik Python SDK for web crawling and content extraction'
+title: "Python SDK"
+description: "Get started with the Olyptik Python SDK for web crawling and content extraction"
 ---
 
 # Python SDK
@@ -42,6 +42,7 @@ print(f"Crawl started with ID: {crawl.id}")
 print(f"Status: {crawl.status}")
 ```
 
+
 ```python Full Example
 # Start a crawl
 crawl = client.run_crawl({
@@ -60,6 +61,7 @@ crawl = client.run_crawl({
 print(f"Crawl started with ID: {crawl.id}")
 print(f"Status: {crawl.status}")
 ```
+
 </CodeGroup>
 
 ### Get crawl results
@@ -103,6 +105,7 @@ async def main():
 
 asyncio.run(main())
 ```
+
 
 ```python Full Example
 import asyncio
@@ -184,18 +187,19 @@ asyncio.run(main())
 The crawl configuration options available:
 
 The run crawl payload:
-| Property | Type | Required | Default | Description |
-|--------|------|----------|---------|-------------|
-| startUrl | string | ✅ | - | The URL to start crawling from |
-| maxResults | number | ✅ | - | Maximum number of results to collect (1-10,000) |
-| maxDepth | number | ❌ | 10 | Maximum depth of pages to crawl (1-100) |
-| includeLinks | boolean | ❌ | true | Whether to include links in the crawl results' markdown |
-| useSitemap | boolean | ❌ | false | Whether to use sitemap.xml to crawl the website |
-| entireWebsite | boolean | ❌ | false | Whether to crawl the entire website |
-| excludeNonMainTags | boolean | ❌ | true | Whether to exclude non-main tags from the crawl results' markdown |
-| timeout | number | ❌ | 60 | Timeout duration in minutes |
-| engineType | string | ❌ | "auto" | The engine to use: "auto", "cheerio" (fast, static sites), "playwright" (dynamic sites) |
-| useStaticIps | boolean | ❌ | false | Whether to use static IPs for the crawl |
+
+| Property           | Type    | Required | Default | Description                                                                             |
+| ------------------ | ------- | -------- | ------- | --------------------------------------------------------------------------------------- |
+| startUrl           | string  | ✅        | -       | The URL to start crawling from                                                          |
+| maxResults         | number  | ✅        | -       | Maximum number of results to collect (1-10,000)                                         |
+| maxDepth           | number  | ❌        | 10      | Maximum depth of pages to crawl (1-100)                                                 |
+| includeLinks       | boolean | ❌        | true    | Whether to include links in the crawl results' markdown                                 |
+| useSitemap         | boolean | ❌        | false   | Whether to use sitemap.xml to crawl the website                                         |
+| entireWebsite      | boolean | ❌        | false   | Whether to crawl the entire website                                                     |
+| excludeNonMainTags | boolean | ❌        | true    | Whether to exclude non-main tags from the crawl results' markdown                       |
+| timeout            | number  | ❌        | 60      | Timeout duration in minutes                                                             |
+| engineType         | string  | ❌        | "auto"  | The engine to use: "auto", "cheerio" (fast, static sites), "playwright" (dynamic sites) |
+| useStaticIps       | boolean | ❌        | false   | Whether to use static IPs for the crawl                                                 |
 
 ### Engine Types
 
@@ -259,7 +263,7 @@ Each crawl result contains:
 @dataclass
 class CrawlResult:
     crawlId: str          # Unique identifier for the crawl
-    brandId: str          # Brand identifier
+    teamId: str           # Team identifier
     url: str              # The crawled URL
     title: str            # Page title
     markdown: str         # Extracted content in markdown format
@@ -280,7 +284,7 @@ class Crawl:
     includeLinks: bool         # Whether links are included
     maxDepth: int              # Maximum crawl depth
     maxResults: int            # Maximum number of results
-    brandId: str               # Brand identifier
+    teamId: str                # Team identifier
     createdAt: str             # Creation timestamp
     completedAt: Optional[str] # Completion timestamp
     durationInSeconds: int     # Total duration
@@ -327,6 +331,7 @@ crawl = client.run_crawl({
 ### Common Issues
 
 **Import Error**: Make sure you have installed the package correctly:
+
 ```bash
 pip install --upgrade olyptik
 ```
@@ -334,6 +339,7 @@ pip install --upgrade olyptik
 **Authentication Error**: Verify your API key is correct and has sufficient permissions.
 
 **Timeout Issues**: Increase the timeout value for large crawls:
+
 ```python
 crawl = client.run_crawl({
     "startUrl": "https://example.com",
@@ -342,6 +348,7 @@ crawl = client.run_crawl({
 ```
 
 **Rate Limiting**: The SDK automatically handles retries, but you can implement additional backoff:
+
 ```python
 import time
 from olyptik import ApiError
@@ -356,5 +363,5 @@ except ApiError as e:
 
 ## Support
 
-- 📧 Email: support@olyptik.io
+- 📧 Email: [support@olyptik.io](mailto:support@olyptik.io)
 - 📚 API Reference: [API Documentation](/api-reference/introduction)
