--- a/sdks/python.mdx
+++ b/sdks/python.mdx
@@ -292,73 +292,7 @@ class Crawl:
     useSitemap: bool           # Whether sitemap was used
     entireWebsite: bool        # Whether to use both sitemap and all found links
     excludeNonMainTags: bool   # Whether non-main tags are excluded from the crawl results' markdown
-    timeout: int              # Timeout setting
-```
-
-## Best Practices
-
-### 1. Use Async for Better Performance
-
-```python
-# ✅ Good: Use async for I/O intensive operations
-async with AsyncOlyptik(api_key="your_api_key") as client:
-    crawl = await client.run_crawl(payload)
-    results = await client.get_crawl_results(crawl.id)
-
-# ❌ Avoid: Blocking operations in async context
-client = Olyptik(api_key="your_api_key")  # In async function
-```
-
-### 4. Choose the Right Engine
-
-```python
-# ✅ Good: Choose engine based on site type
-# For JavaScript-heavy sites
-crawl = client.run_crawl({
-    "startUrl": "https://spa-app.com",
-    "engineType": EngineType.PLAYWRIGHT
-})
-
-# For static content sites
-crawl = client.run_crawl({
-    "startUrl": "https://blog.example.com", 
-    "engineType": EngineType.CHEERIO
-})
-```
-
-## Troubleshooting
-
-### Common Issues
-
-**Import Error**: Make sure you have installed the package correctly:
-
-```bash
-pip install --upgrade olyptik
-```
-
-**Authentication Error**: Verify your API key is correct and has sufficient permissions.
-
-**Timeout Issues**: Increase the timeout value for large crawls:
-
-```python
-crawl = client.run_crawl({
-    "startUrl": "https://example.com",
-    "timeout": 300  # 5 minutes
-})
-```
-
-**Rate Limiting**: The SDK automatically handles retries, but you can implement additional backoff:
-
-```python
-import time
-from olyptik import ApiError
-
-try:
-    crawl = client.run_crawl(payload)
-except ApiError as e:
-    if e.status_code == 429:
-        time.sleep(60)  # Wait 1 minute
-        crawl = client.run_crawl(payload)
+    timeout: int               # Timeout (minues)
 ```
 
 ## Support
