Documentation edits made through Mintlify web editor

--- a/sdks/python.mdx
+++ b/sdks/python.mdx
@@ -62,6 +62,17 @@ print(f"Crawl started with ID: {crawl.id}")
 print(f"Status: {crawl.status}")
 ```
 
+
+``` Entire Website Example
+crawl = client.run_crawl({
+    "startUrl": "https://example.com",
+    "entireWebsite": True
+})
+
+print(f"Crawl started with ID: {crawl.id}")
+print(f"Status: {crawl.status}")
+```
+
 </CodeGroup>
 
 ### Get crawl results
