Documentation edits made through Mintlify web editor

--- a/sdks/nodejs.mdx
+++ b/sdks/nodejs.mdx
@@ -24,7 +24,7 @@ const client = new Olyptik({ apiKey: 'your-api-key' });
 
 ## Usage
 
-### Starting a Crawl
+### Starting a crawl
 
 The SDK allows you to start web crawls with various configuration options:
 
@@ -72,7 +72,7 @@ const result = await client.queryCrawls({
 });
 ```
 
-### Getting Crawl Results
+### Get crawl results
 
 Retrieve the results of your crawl using the crawl ID:
 
