Documentation edits made through Mintlify web editor

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -11,7 +11,7 @@ Olyptik is a powerful web scraping and data extraction platform that helps you g
 
 ### Authentication
 
-First, you'll need an API key. You can get one from your [settings page](https://app.olyptik.io/settings/crawl). Include it in your requests using the Authorization header:
+First, you'll need an API key. You can get one from your [settings page](https://app.olyptik.io/settings/project). Include it in your requests using the Authorization header:
 
 ```bash
 Authorization: Bearer your-api-key
@@ -96,7 +96,7 @@ You have two options to track your crawl's progress:
 
 #### Option 1: Webhook Notifications (Recommended)
 
-Configure a webhook URL in your [settings page](https://app.olyptik.io/settings/crawl) to receive real-time status updates. You can choose from two notification types:
+Configure a webhook URL in your [settings page](https://app.olyptik.io/settings/project) to receive real-time status updates. You can choose from two notification types:
 
 - **Crawl Status Changes**: Receive notifications when crawl status changes (succeeded, failed, timed out, etc.)
 - **Individual Results**: Receive notifications for each page crawled during the process
