--- a/sdks/nodejs.mdx
+++ b/sdks/nodejs.mdx
@@ -13,7 +13,7 @@ npm install olyptik
 
 ## Configuration
 
-First, you'll need to initialize the SDK with your API key - you can get it from the [settings page](https://app.olyptik.io/settings/crawl). You can either pass it directly or use environment variables.
+First, you'll need to initialize the SDK with your API key - you can get it from the [settings page](https://app.olyptik.io/settings/project). You can either pass it directly or use environment variables.
 
 ```typescript
 import Olyptik from 'olyptik';
