--- a/sdks/overview.mdx
+++ b/sdks/overview.mdx
@@ -1,23 +1,15 @@
 ---
-title: 'SDK Overview'
-description: 'Choose the right Olyptik SDK for your project'
+title: "SDK Overview"
+description: "Choose the right Olyptik SDK for your project"
 ---
 
 ## Choose Your SDK
 
 <CardGroup cols={2}>
-  <Card
-    title="Python SDK"
-    icon="python"
-    href="/sdks/python"
-  >
+  <Card title="Python SDK" icon="python" href="/sdks/python">
     Perfect for data science, automation scripts, and backend services. Includes sync & async support with full type hints.
   </Card>
-  <Card
-    title="Node.js SDK"
-    icon="node-js"
-    href="/sdks/nodejs"
-  >
+  <Card title="Node.js SDK" icon="node-js" href="/sdks/nodejs">
     Ideal for web applications, serverless functions, and JavaScript projects. Full TypeScript support included.
   </Card>
 </CardGroup>
@@ -27,13 +19,13 @@ description: 'Choose the right Olyptik SDK for your project'
 All SDKs provide:
 
 - ✅ **Authentication** - API key management
-- ✅ **Crawl Management** - Start, monitor, and abort crawls  
+- ✅ **Crawl Management** - Start, monitor, and abort crawls
 - ✅ **Result Retrieval** - Paginated access to crawl results
 
 ## Getting Your API Key
 
 Before using any SDK, you'll need an API key:
 
-1. If your not a memeber, you are welcomed to join: [sign up for Olyptik](https://app.olyptik.io/signup) 
-2. Navigate to [Settings → API Keys](https://app.olyptik.io/settings/crawl)
+1. If your not a memeber, you are welcomed to join: [sign up for Olyptik](https://app.olyptik.io/signup)
+2. Navigate to [Settings → API Keys](https://app.olyptik.io/settings/project)
 3. Use the key provided
