Documentation edits made through Mintlify web editor

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -71,7 +71,7 @@ The response will include a `crawl` object that you'll use to track and retrieve
 
 ```json Crawl object
 {
-  "id": "crawl_123",
+  "id": "6870e36787c81925622df818",
   "status": "running",
   "startUrls": ["https://example.com"],
   "maxResults": 50,
@@ -82,6 +82,8 @@ The response will include a `crawl` object that you'll use to track and retrieve
   "excludeNonMainTags": true,
   "useStaticIps": false,
   "origin": "api",
+  "teamId": "5870e36787c81925622df543",
+  "projectId": "7895e36754c85425622dk946",
   "timeout": 60,
   "durationInSeconds": 0,
   "completedAt": null,
@@ -223,6 +225,7 @@ Example response:
       "id": "6870e3c687c81925622df89e",
       "crawlId": "6870e36787c81925622df818",
       "teamId": "680e8bc08cdb14f10180db6a",
+	  "projectId": "6450e36787c81925622df494",
       "url": "https://example.com/solutions/network-observability",
       "depthOfUrl": 4,
       "title": "Kubernetes Network Observability",
