Documentation edits made through Mintlify web editor

--- a/sdks/nodejs.mdx
+++ b/sdks/nodejs.mdx
@@ -57,7 +57,7 @@ const crawl = await client.runCrawl({
 
 ### Get crawl
 
-Retrieve a crawl - the response will be a [crawl object]("https://localhost:3000/sdks/nodejs#crawl-object")
+Retrieve a crawl - the response will be a [crawl object](https://docs.olyptik.io/sdks/python#crawl).
 
 ```typescript
 const crawl = await client.getCrawl(crawl.id);
