Documentation edits made through Mintlify web editor

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -80,6 +80,7 @@ The response will include a `crawl` object that you'll use to track and retrieve
   "includeLinks": true,
   "entireWebsite": false,
   "excludeNonMainTags": true,
+  "deduplicateContent": true,
   "useStaticIps": false,
   "origin": "api",
   "teamId": "5870e36787c81925622df543",
@@ -123,6 +124,7 @@ You can enable either option or both simultaneously.
       "entireWebsite": false,
       "useSitemap": false,
       "excludeNonMainTags": true,
+	  "deduplicateContent": true,
       "useStaticIps": false,
       "maxDepth": 5,
       "maxResults": 20,
