--- a/sdks/python.mdx
+++ b/sdks/python.mdx
@@ -204,6 +204,7 @@ The run crawl payload:
 | maxDepth           | number  | ❌                                                                                      | 10      | Maximum depth of pages to crawl (1-100)                                                 |
 | includeLinks       | boolean | ❌                                                                                      | true    | Whether to include links in the crawl results' markdown                                 |
 | excludeNonMainTags | boolean | ❌                                                                                      | true    | Whether to exclude non-main tags from the crawl results' markdown                       |
+| deduplicateContent | boolean | ❌                                                                                      | true    | Whether to remove duplicate text fragments that appeared on other pages                 |
 | timeout            | number  | ❌                                                                                      | 60      | Timeout duration in minutes                                                             |
 | engineType         | string  | ❌                                                                                      | "auto"  | The engine to use: "auto", "cheerio" (fast, static sites), "playwright" (dynamic sites) |
 | useStaticIps       | boolean | ❌                                                                                      | false   | Whether to use static IPs for the crawl                                                 |
