--- a/sdks/nodejs.mdx
+++ b/sdks/nodejs.mdx
@@ -101,6 +101,7 @@ const abortedCrawl = await client.abortCrawl(crawl.id);
 | maxDepth           | number  | ❌                                                                                      | 10      | Maximum depth of pages to crawl (1-100)                                                 |
 | includeLinks       | boolean | ❌                                                                                      | true    | Whether to include links in the crawl results' markdown                                 |
 | excludeNonMainTags | boolean | ❌                                                                                      | true    | Whether to exclude non-main tags from the crawl results' markdown                       |
+| deduplicateContent | boolean | ❌                                                                                      | true    | Whether to remove duplicate text fragments that appeared on other pages                 |
 | timeout            | number  | ❌                                                                                      | 60      | Timeout duration in minutes                                                             |
 | engineType         | string  | ❌                                                                                      | "auto"  | The engine to use: "auto", "cheerio" (fast, static sites), "playwright" (dynamic sites) |
 | useStaticIps       | boolean | ❌                                                                                      | false   | Whether to use static IPs for the crawl                                                 |
@@ -124,6 +125,7 @@ const abortedCrawl = await client.abortCrawl(crawl.id);
 | useSitemap         | boolean        | Whether sitemap was used                                                           |
 | entireWebsite      | boolean        | Whether to crawl the entire website                                                |
 | excludeNonMainTags | boolean        | Whether non-main tags are excluded from the crawl results' markdown                |
+| deduplicateContent | boolean        | Whether to remove duplicate text fragments that appeared on other pages.           |
 | timeout            | number         | The timeout of the crawl in minutes                                                |
 
 ### CrawlResult
