Documentation edits made through Mintlify web editor

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -86,6 +86,7 @@ The response will include a `crawl` object that you'll use to track and retrieve
   "teamId": "5870e36787c81925622df543",
   "projectId": "7895e36754c85425622dk946",
   "timeout": 60,
+  "extraction" :"",
   "durationInSeconds": 0,
   "completedAt": null,
   "createdAt": "2024-03-21T10:00:00Z",
@@ -125,6 +126,7 @@ You can enable either option or both simultaneously.
       "useSitemap": false,
       "excludeNonMainTags": true,
 	  "deduplicateContent": true,
+      "extraction" :"",
       "useStaticIps": false,
       "maxDepth": 5,
       "maxResults": 20,
@@ -151,6 +153,7 @@ You can enable either option or both simultaneously.
 	  "projectId": "6450e36787c81925622df494",
       "teamId": "680e8bc08cdb14f10180db6a",
       "url": "https://example.com/solutions/network-observability",
+      "isAiAltered": false,
       "depthOfUrl": 4,
       "title": "Kubernetes Network Observability",
       "markdown": "## Awesome website content...",
@@ -229,6 +232,7 @@ Example response:
       "teamId": "680e8bc08cdb14f10180db6a",
 	  "projectId": "6450e36787c81925622df494",
       "url": "https://example.com/solutions/network-observability",
+      "isAiAltered": false,
       "depthOfUrl": 4,
       "title": "Kubernetes Network Observability",
       "markdown": "## Awesome website content...",
