Documentation edits made through Mintlify web editor

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -153,7 +153,7 @@ You can enable either option or both simultaneously.
 	  "projectId": "6450e36787c81925622df494",
       "teamId": "680e8bc08cdb14f10180db6a",
       "url": "https://example.com/solutions/network-observability",
-      "isAiAltered": false,
+      "processedByAI": false,
       "depthOfUrl": 4,
       "title": "Kubernetes Network Observability",
       "markdown": "## Awesome website content...",
@@ -232,7 +232,7 @@ Example response:
       "teamId": "680e8bc08cdb14f10180db6a",
 	  "projectId": "6450e36787c81925622df494",
       "url": "https://example.com/solutions/network-observability",
-      "isAiAltered": false,
+      "processedByAI": false,
       "depthOfUrl": 4,
       "title": "Kubernetes Network Observability",
       "markdown": "## Awesome website content...",
